--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ logo: "/images/Me.jpg" # your photo (or logo) here
 description: > # your text below (remove <br /> elements if you don't need line breaks)
   CSCI 496: Senior Portfolio<br />
   In partial fulfillment of the requirements for the degree of
-  Bachelor of Science in Computer-Science (class of 2040)
+  Bachelor of Science in Computer-Science (class of 2023)
   <br /><br />
   <a href="https://example.com/resume">View My Resume</a>
   <br /><br />
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a>
+  <a href="https://csuniv.joinhandshake.com/stu/users/25814238">View My Charleston Southern Handshake Profile</a>
 repository: "csci-csu/csci-portfolio"
 github_username:  kilikwhite # update with your username
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
