--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # your text below (remove <br /> elements if you don't need line 
   In partial fulfillment of the requirements for the degree of
   Bachelor of Science in Computer-Science (class of 2023)
   <br /><br />
-  <a href="My_Resume.pdf">My Resume</a>
+  <a href="/pdf/Resume_Kilik.pdf">My Resume</a>
   <br /><br />
   <a href="https://csuniv.joinhandshake.com/stu/users/25814238">View My Charleston Southern Handshake Profile</a>
 repository: "csci-csu/csci-portfolio"
